Bug 693807: put floor on A value (r=rulohani).

{{mercurial 5138da12ff8b21037d61ba8b8e743650c2aca1ff}}

CL@1057660